docs-archive/apache-airflow-providers-amazon/9.30.0/_sources/_api/airflow/providers/amazon/aws/transfers/sftp_to_s3/index.rst.txt
airflow.providers.amazon.aws.transfers.sftp_to_s3
=================================================

.. py:module:: airflow.providers.amazon.aws.transfers.sftp_to_s3


Classes
-------

.. autoapisummary::

   airflow.providers.amazon.aws.transfers.sftp_to_s3.SFTPToS3Operator


Module Contents
---------------

.. py:class:: SFTPToS3Operator(*, s3_bucket, s3_key, sftp_path, sftp_conn_id = 'ssh_default', sftp_remote_host = '', sftp_filenames = None, s3_filenames = None, use_temp_file = True, fail_on_file_not_exist = True, replace = False, encrypt = False, gzip = False, acl_policy = None, aws_conn_id = 'aws_default', s3_conn_id = None, **kwargs)

   Bases: :py:obj:`airflow.providers.common.compat.sdk.BaseOperator`


   Transfer files from an SFTP server to Amazon S3.

   .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/operator:SFTPToS3Operator`

   :param sftp_conn_id: The sftp connection id. The name or identifier for
       establishing a connection to the SFTP server.
   :param sftp_remote_host: The remote host of the SFTP server. Overrides host in
       Connection.
   :param sftp_path: The sftp remote path. For a single file it must include the
       file path. For multiple files it is the directory path where the files are
       located.
   :param sftp_filenames: Only used if you want to move multiple files. You can pass
       a list with exact filenames present in the sftp path, or a prefix that all
       files must match. Use ``"*"`` to move all files within the sftp path.
   :param aws_conn_id: The Airflow connection used for AWS credentials.
       If this is None or empty then the default boto3 behaviour is used. If
       running Airflow in a distributed manner and aws_conn_id is None or
       empty, then default boto3 configuration would be used (and must be
       maintained on each worker node).
   :param s3_bucket: The targeted s3 bucket. This is the S3 bucket to where
       the file is uploaded.
   :param s3_key: The targeted s3 key. For a single file it must include the file
       path. For multiple files it must end with ``"/"``.
   :param s3_filenames: Only used if you want to move multiple files and name them
       differently from the originals on the SFTP server. It can be a list of
       filenames or a string prefix that replaces the sftp prefix.
   :param use_temp_file: If True, copies file first to local,
       if False streams file from SFTP to S3.
   :param fail_on_file_not_exist: If True, operator fails when file does not exist,
       if False, operator will not fail and skips transfer. Default is True.
   :param replace: If True, overwrite the S3 key if it already exists.
   :param encrypt: If True, the file will be encrypted on the server-side by S3.
   :param gzip: If True, the file will be compressed locally before upload.
   :param acl_policy: Canned ACL policy for the file being uploaded to S3.


   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]
      :value: ('s3_key', 'sftp_path', 's3_bucket', 'sftp_filenames', 's3_filenames')



   .. py:attribute:: sftp_conn_id
      :value: 'ssh_default'



   .. py:attribute:: sftp_path


   .. py:attribute:: sftp_remote_host
      :value: ''



   .. py:attribute:: s3_bucket


   .. py:attribute:: s3_key


   .. py:attribute:: aws_conn_id
      :value: 'aws_default'



   .. py:attribute:: sftp_filenames
      :value: None



   .. py:attribute:: s3_filenames
      :value: None



   .. py:attribute:: use_temp_file
      :value: True



   .. py:attribute:: fail_on_file_not_exist
      :value: True



   .. py:attribute:: replace
      :value: False



   .. py:attribute:: encrypt
      :value: False



   .. py:attribute:: gzip
      :value: False



   .. py:attribute:: acl_policy
      :value: None



   .. py:method:: get_s3_key(s3_key)
      :staticmethod:


      Parse the correct format for S3 keys regardless of how the S3 url is passed.



   .. py:method:: execute(context)

      Derive when creating an operator.

      The main method to execute the task. Context is the same dictionary used
      as when rendering jinja templates.

      Refer to get_template_context for more context.



